<resources>
    <string name="app_name">Lima</string>
    <string name="signin">Sign In</string>
    <string name="facebook_application_id" translatable="false">480728685875212</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb480728685875212</string>
    <string name="farmer">I am a Farmer</string>
    <string name="landowner">I am Land Owner</string>
    <string name="scat">Select Category</string>
    <string name="selectcounty">Select Region</string>
    <string name="selectcrop">Crops favourable for growth in County</string>
    <string name="allyouneed">All you need to know about Crop</string>
    <string name="comprof">Profile</string>
    <string name="name">Official Name</string>
    <string name="description">Describe your property</string>
    <string name="location">Property Location</string>
    <string name="ownertype">Property Ownership Type</string>
    <string name="leaseprice">Lease Price in KES</string>
    <string name="areaunits">Area Units in Square Meters</string>
    <string name="totalarea">Total Land Area in Square Meters</string>
    <string name="addons">Additional Info</string>
    <string name="contact">Primary Contact Phone Number</string>
    <string name="email">Primary Contact Email Address</string>
    <string name="submit">Update Profile</string>
    <string name="select">Select Ownership Type</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ob_get_started">Update Profile</string>
    >

    <!-- OnBoard Screen. -->

    <string name="ob_header1">lorem ipsum</string>
    <string name="ob_header2">FREE WONEP TO WONEP</string>
    <string name="ob_header3">NO HIDDEN CHARGES OR FEES</string>


    <string name="ob_desc1">Wonep converts international calls to local calls without WiFi or data</string>
    <string name="ob_desc2">If the person you’re calling also has Wonep the call will be entirely free</string>
    <string name="ob_desc3">We have a very small charge for non-Wonep calls to mobiles or landlines</string>
    <string name="lorem">lorem ipsum</string>
    <string name="skip">Skip</string>
    <string name="loremfarm">Lorem Farmers</string>
    <string name="ob_descfarm">ffdfdf</string>
    <string name="ob_headerfarm">Lorem Farmer</string>
    <string name="getstarted">Get Started</string>

    <string name="api_key">AIzaSyAie8obTofjOxWMLGE8QitgqqNeSx0zA3g</string>
    <string name="primary">Disease Description</string>
    <string name="sampledesc">Disease description</string>
    <string name="primarytitle">Disease Title</string>
    <string name="action_1">Purchase Pesticide</string>
    <string name="expanded_supporting">Disease Management</string>
    <string name="action_2">Management</string>
    <string name="financialname">Finance Instution Name</string>
    <string name="descriptions">Institutuion Description</string>
    <string name="gotoweb">Go to Website</string>
    <string name="contactus">Contact</string>
    <string name="insti">Name</string>
    <string name="client">Client Name</string>
    <string name="order">2 bags of potatoes</string>
    <string name="quantity">Order</string>
    <string name="locations">Client Location</string>
    <string name="locationss">Location</string>
    <string name="phones">Phone Number</string>
    <string name="pending">Pending</string>
    <string name="status">Order Status</string>
    <string name="call">Call Client</string>
    <string name="owner">Name of Owner</string>
    <string name="ds">Description</string>
    <string name="service">Service Description</string>
    <string name="leaseterms">Lease Terms</string>


</resources>
