<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/iv_onboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/iconbig"
        />




    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="@dimen/ob_desc_padding"
        android:paddingRight="@dimen/ob_desc_padding"
        android:text="@string/loremfarm"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:fontFamily="@font/indieflower"
        android:layout_below="@+id/iv_onboard"
        android:textColor="@color/ob_header"
        android:textSize="@dimen/ob_header_text_size" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_below="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/indieflower"
        android:paddingLeft="@dimen/ob_desc_padding"
        android:paddingRight="@dimen/ob_desc_padding"
        android:text="@string/lorem"
        android:textColor="@color/ob_desc"
        android:textSize="@dimen/ob_desc_text_size" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="16dp"
        android:text="@string/skip"
        android:fontFamily="@font/indieflower"
        android:textStyle="bold"
        android:backgroundTint="#D5C1C1"
        android:textColor="#000"
        android:id="@+id/btnSkip"
        />




</RelativeLayout>